[gd_scene load_steps=7 format=2]

[ext_resource path="res://projectiles/regular_gun/regular_bullet_1.png" type="Texture" id=1]
[ext_resource path="res://projectiles/regular_gun/regular_bullet_2.png" type="Texture" id=2]
[ext_resource path="res://projectiles/regular_gun/regular_bullet_0.png" type="Texture" id=3]
[ext_resource path="res://RegularBullet.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "BulletFired",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 1 )

[node name="RegularBullet" type="Area2D"]
collision_layer = 8
collision_mask = 34
script = ExtResource( 4 )

[node name="Bullet_Anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "BulletFired"
frame = 1

[node name="Bullet_Hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Bullet_Visibility" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_RegularBullet_body_entered"]
[connection signal="screen_exited" from="Bullet_Visibility" to="." method="_on_Bullet_Visibility_screen_exited"]
